# zephyr

./: west.yml
boards/xtensa/up_squared_adsp/: CMakeLists.txt  up_squared_adsp_defconfig
boards/xtensa/up_squared_adsp/bootloader/: CMakeLists.txt  boot_entry.S  boot_ldr.x  boot_loader.c  memctl_default.S  reset-vector.S  xtos-internal.h  xtos-params.h
boards/xtensa/up_squared_adsp/bootloader/arch/: cache.h
boards/xtensa/up_squared_adsp/tools/: README.md  dump_trace.py  fw_loader.py  logtool.py
boards/xtensa/up_squared_adsp/tools/utilities/: device.py  driver.py  etrace.py  ipc.py  loader.py  platforms.py  stream_desc.py
drivers/interrupt_controller/: intc_cavs.c
dts/xtensa/intel/: intel_apl_adsp.dtsi
samples/audio/sof/: prj.conf
scripts/west_commands/: sign.py
soc/xtensa/intel_adsp/: CMakeLists.txt
soc/xtensa/intel_adsp/baytrail_adsp/: Kconfig.defconfig.series  Kconfig.series  Kconfig.soc
soc/xtensa/intel_adsp/broadwell_adsp/: Kconfig.defconfig.series  Kconfig.series  Kconfig.soc
soc/xtensa/intel_adsp/cavs_v15/: CMakeLists.txt  Kconfig.defconfig.series  Kconfig.series  adsp.c  power_down.S  soc.h
soc/xtensa/intel_adsp/cavs_v15/include/platform/: asm_ldo_management.h  asm_memory_management.h  clk.h  cpu.h  pm_runtime.h  shim.h
soc/xtensa/intel_adsp/cavs_v15/include/todo_merge/: mailbox.h  memory.h  platform.h
soc/xtensa/intel_adsp/cavs_v18/: Kconfig.defconfig.series  Kconfig.series
soc/xtensa/intel_adsp/cavs_v20/: CMakeLists.txt  Kconfig.defconfig.series  Kconfig.series
soc/xtensa/intel_adsp/cavs_v25/: Kconfig.defconfig.series  Kconfig.series
soc/xtensa/intel_adsp/common/: CMakeLists.txt  mem_window.c  power_down.S
soc/xtensa/intel_adsp/common/include/cavs/: asm_ldo_management.h  mem_window.h
soc/xtensa/intel_apl_adsp/: Kconfig.defconfig  linker.ld  soc.c
soc/xtensa/intel_apl_adsp/include/platform/: clk.h  cpu.h  interrupt.h  io.h  memory.h  platform.h  timer.h
subsys/logging/: CMakeLists.txt  Kconfig  log_backend_adsp.c
